# sview

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
notes/: ab-test.md
scripts/: generate-homebrew-formula.sh
skills/sview/: SKILL.md
skills/sview-dogfooding/: SKILL.md
src/: analyzer.rs  cpp.rs  java.rs  javascript.rs  kotlin.rs  lib.rs  main.rs  markdown.rs  model.rs  objc.rs  render.rs  rust.rs  swift.rs  traverse.rs  tree.rs  util.rs
tests/: cli.rs  fixtures.rs
tests/fixtures/: c_sample.c  cpp_sample.cpp  java_sample.java  javascript_sample.js  kotlin_sample.kt  markdown_sample.md  objc_sample.m  rust_sample.rs  swift_sample.swift  tsx_sample.tsx  typescript_sample.ts
