[package]
name = "sview"
version = "0.1.0"
edition = "2021"
description = "Agent-friendly structure views of source and document files"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.15.0"
