[package]
name = "sview"
version = "0.1.2"
edition = "2021"
rust-version = "1.85"
description = "Agent-friendly structure views of source and document files"
license = "Apache-2.0"
repository = "https://github.com/holon-run/sview"
homepage = "https://github.com/holon-run/sview"
documentation = "https://docs.rs/sview"
readme = "README.md"
keywords = ["agent", "cli", "outline", "tree-sitter", "structure"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tree-sitter = "0.26.9"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-objc = "3.0.2"
tree-sitter-rust = "0.24.2"
tree-sitter-swift = "0.7.3"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.15.0"
